forgor to implement jotttree